Fix: Flechas visibles

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -18,9 +18,6 @@ ul .material-icons{
 }
 
 .card-image{
-    position: relative;
-    display: block;
-    width: 100% !important;
     height: 200px !important;
     background-size: cover !important;
     background-position: center !important;
@@ -30,9 +27,21 @@ ul .material-icons{
     box-shadow: 0px 0px 15px 0px rgba(50,50,50,.5);
 }
 
+.card-body .items > div{
+    margin-top:5px;
+    margin-bottom:5px;
+    position:relative;
+}
+
 .icon-card{
+    position:absolute;
     width:18px;
     height:15px;
+}
+
+.icon-text{
+    position:relative;
+    left:32px;
 }
 
 .departament{
@@ -54,6 +63,11 @@ ul .material-icons{
 }
 
 @media only screen and (max-width:968px){
+
+    .prev{
+        opacity: 1 !important;
+    }
+    
     .card-image{
         height: 350px !important;
     }
