--- a/src/app/pages/home/departament/departament.component.scss
+++ b/src/app/pages/home/departament/departament.component.scss
@@ -1,7 +1,7 @@
 .image-item{
   background-size:cover;
   background-position: center;
-  min-height: 350px;
+  min-height: 450px;
 }
 
 .list{
