--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,8 @@ p, i, label,input, select{
 .d-flex{
   display:flex;
 }
+
+
+.icon-gray{
+  color: #717578 !important;
+}
